--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leaderboard - Google Event</title>
     <link rel="stylesheet" href="styles.css">
+    
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> <!-- Optional: Compatibility with older browsers -->
+
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Raleway:wght@400&family=Nunito:wght@300&family=Open+Sans:wght@400&family=Inter:wght@400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Orbitron:wght@400&display=swap" rel="stylesheet">
 </head>
