--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
 
     <h1>Track your progress</h1>
 
-    <p id="header_text">
-        Updated everyday so please wait 24 hours to see progress<br>
-        The earlier you finish the higher your name
+    <p id="header_text" style="font-size: 1.1rem; background-color: #fdc23a; color: white; border-radius: 0.5rem; padding: 1rem 1rem;">
+        <span><strong>&nbsp;&nbsp;Important: </strong>The campaign is paused from 22nd october to 1st november&nbsp;&nbsp;</span><br>
+        <span>&nbsp;&nbsp;Please continue the labs only from 2nd November. Any progress before then won't be counted&nbsp;&nbsp;</span><br>
+        <span>&nbsp;&nbsp;Last day to complete all labs is extended to 16th November&nbsp;&nbsp;</span><br>
+        <!-- Updated everyday so please wait 24 hours to see progress<br> -->
+        <!-- The earlier you finish the higher your name -->
     </p>
 
     <table id="leaderboard">
