--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
 
     <h1>Track your progress</h1>
 
-    <p id="header_text" style="font-size: 1.1rem; background-color: #fdc23a; color: white; border-radius: 0.5rem; padding: 1rem 1rem;">
-        <span><strong>&nbsp;&nbsp;Important: </strong>The campaign is paused from 22nd october to 1st november&nbsp;&nbsp;</span><br>
-        <span>&nbsp;&nbsp;Please continue the labs only from 2nd November. Any progress before then won't be counted&nbsp;&nbsp;</span><br>
-        <span>&nbsp;&nbsp;Last day to complete all labs is extended to 16th November&nbsp;&nbsp;</span><br>
-        <!-- Updated everyday so please wait 24 hours to see progress<br> -->
-        <!-- The earlier you finish the higher your name -->
+    <p id="header_text" style="font-size: 1.1rem; padding: 1rem 1rem; margin-bottom: 0.5rem">
+        
+        Updated everyday so please wait 24 hours to see progress<br>
+        If 60 students complete all their labs, they will earn Tier 2 swags. If 80 students complete, they will receive Tier 1 swags!<br>
+        Please note that leaderboard rankings do not indicate how early you completed your tasks. Use it to keep track of your progress only<br>
+        Last date to complete the labs is <strong>16th November</strong>
     </p>
+    <img src="swags.jpg" alt="swags image" style="max-width: 25rem; margin: 1rem; margin-top: 0; border-radius: 1.5rem">
 
     <table id="leaderboard">
         <thead>
